# specgen

./: EXAMPLES.md  README.md  specgen.cabal
examples/Phils2/: Phils2.eap  phils2.csp  phils2.xml  runphils2.csp
examples/Phils3/: Phils3.eap  phils3.csp  phils3.xml  runphils3.csp  sgbase.csp
examples/Phils3Lefty/: Phils3Lefty.eap  phils3lefty.csp  phils3lefty.xml  runphils3lefty.csp
examples/Phils3LeftyMissingGuard/: Phils3LeftyMissingGuard.eap  phils3leftymissingguard.csp  phils3leftymissingguard.xml  runphils3leftymissingguard.csp
examples/Phils3LeftyRaceCondition/: Phils3LeftyRaceCondition.eap  phils3leftyracecondition.csp  phils3leftyracecondition.xml  runphils3leftyracecondition.csp
examples/Phils4/: Phils4.eap  phils4.csp  phils4.xml  runphils4.csp
examples/TimerTest/: TimerTest.eap  runtimertest.csp  timertest.csp  timertest.xml
src/: Main.hs
src/Language/CSPM/SpecGen/: UML2CSP.hs  UMLFunctions.hs  UMLParsers.hs  UMLSyntax.hs  XML2UML.hs
